# workbench

./: .env.tmpl  LICENSE  README.md  dev-keycloak.yml  docker-compose.dev.yml  docker-compose.yml  traefik.yml  traefik_dynamic.yml
backend/: .dockerignore  Dockerfile  README.md  build_base_images.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 32bc93f4ab0f_create_database_tables.py  4211e215deb7_remove_session_table.py  55b9bbc1cfe1_extend_models.py  57a82a73cf3e_add_rw_column_to_share_tables.py  90268ce003e9_added_proxied_url_column_to_service_.py  a0c12baaed8e_add_index_in_release_table_for_repo_id.py  c1b3e6d0f104_add_ready_column_to_repository_apps_and_.py  d52b35b90e23_add_app_icon_to_app_table.py  eec1512d3ce6_expand_models.py  f875341fd442_add_session_table.py
backend/images/base-workbench-image/: Dockerfile  get_extra_packages.sh  install_potree_converter.sh  pyproject.toml  requirements.txt  watchdog.sh
backend/images/base-workbench-image/config/: .bash_profile  .bashrc
backend/images/base-workbench-image/smart_runner/: builder.py  runner.py
backend/images/incontainer-editor/: .dockerignore  Dockerfile  entrypoint.sh  package-lock.json  package.json  tsconfig.json
backend/images/incontainer-editor/src/: index.ts  process.ts  utils.ts
backend/scripts/: backend.sh  celery.sh  docker_entrypoint.sh
backend/tests/: conftest.py
backend/tests/db/: test_release.py  test_repository.py  test_user.py  util.py
backend/workbench_backend/api/: __init__.py
backend/workbench_backend/api/routers/: release.py  schemas.py  user.py  webhooks.py
backend/workbench_backend/app/: __init__.py  app.py  config.py  custom_log.py
backend/workbench_backend/cache/: redis.py
backend/workbench_backend/celery_tasks/: celery_app.py  to_sync.py
backend/workbench_backend/celery_tasks/tasks/: release_tasks.py  repository_tasks.py  service_tasks.py
backend/workbench_backend/crud/: __init__.py  _utils.py  base.py  crud_router.py  exceptions.py
backend/workbench_backend/crud/schemas/: app.py  mixins.py  release.py  repository.py  service.py  user.py
backend/workbench_backend/db/: session.py  standalone_session.py
backend/workbench_backend/dependencies/: auth.py  crud.py  util.py
backend/workbench_backend/docker/: build_utils.py  edit_utils.py  events.py  utils.py
backend/workbench_backend/git/: __init__.py  _lock.py  editable_repository.py  git_repository.py
backend/workbench_backend/jsonrpc/: jsonrpc.py
backend/workbench_backend/middlewares/: __init__.py  db_session.py
backend/workbench_backend/templates/: repository.py
backend/workbench_backend/utils/: __init__.py  annotation.py  async_filelock.py  asyncify.py  proxy.py  session_manager.py  timed.py
backend/workbench_backend/workbench_config/: mixin.py  model.py
(+200 files in other folders)
